[tool.poetry]
name = "caringcookie"
version = "0.1.0"
description = ""
authors = ["Damian <damian.makoza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.4.1"
autopep8 = "1.6.0"
crispy-bootstrap5 = "0.6"
Django = "3.2.9"
django-crispy-forms = "1.14.0"
gunicorn = "20.1.0"
Pillow = "9.0.0"
pycodestyle = "2.8.0"
pytz = "2021.3"
sqlparse = "0.4.2"
toml = "0.10.2"
typing-extensions = "4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
